# pidgin-extended-blist-sort

./: .bzrignore  .gitignore  AUTHORS  AUTHORS.md  CHANGES.md  ChangeLog  Makefile.am  Makefile.am.in  Makefile.in  Makefile.mingw  README  README.linux_binary  README.md  README.win32  aclocal.m4  autogen.sh  build-debian-package.sh  build-linux-x86-package.sh  build-win32-package.sh  change_version.sh  config.h.in  config.h.mingw  configure  configure.ac  configure.ac.in  configure.in  configure.in.in  install_linux_package.sh  po-update.sh
.tx/: config
debian/: README.Debian  changelog.in  control  copyright.in  rules
po/: Makefile.mingw  POTFILES  POTFILES.in  de.gmo  de.po  lt.po  nb.po  pidgin-extended-blist-sort.pot  ru.po
scripts/: gen-configure_ac.sh  po-update.sh  version-change.sh
share/appdata/: Makefile.am  pidgin-extended-blist-sort.metainfo.xml.in
src/: Makefile.am  Makefile.in  Makefile.mingw  extended_blist_sort.c  extended_blist_sort.h  extended_menu.c  extended_menu.h  gtkutils.c  gtkutils.h  internal.h  pidgin_internals.c  pidgin_internals.h  plugin_actions.c  plugin_actions.h  prefs.c  prefs.h  sort_methods.c  sort_methods.h  tooltip.c  tooltip.h
src/.deps/: extended_blist_sort.Plo
