ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	VERSION \
	Makefile.mingw \
	src/Makefile.mingw \
	po/Makefile.mingw \
	scripts/gen-mingw-config_h.sh \
	scripts/gen-version.sh \
	src/extended_blist_sort.h \
	src/extended_menu.h \
	src/internal.h \
	src/pidgin_internals.h \
	src/prefs.h \
	src/sort_methods.h \
	src/plugin_actions.h \
	src/tooltip.h

SUBDIRS = src po share
