#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(extended_blist_sort, 1.6, freakazoid@teamblind.de)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/extended_blist_sort.c])
AC_CONFIG_HEADER([config.h])

AC_DEFINE_UNQUOTED(PLUGIN_VERSION, ["1.6"], [Define the plugin version to be used])

AC_DEFINE_UNQUOTED(PLUGIN_WEBSITE, ["http://freakazoid.teamblind.de/2008/12/13/pidgin-extended-buddy-list-sort-plugin/"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_ID, ["gtk-freakazoid-extended_blist_sort"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_STATIC_NAME, ["extended_blist_sort"], [Define the plugin website to be used])

AC_DEFINE_UNQUOTED(PLUGIN_AUTHOR, ["Konrad Gräfe <freakazoid@teamblind.de>"], [Define the plugin author to be used])


# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL
GETTEXT_PACKAGE=extended_blist_sort
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, ["$GETTEXT_PACKAGE"], [Define the gettext package to be used])
ALL_LINGUAS="de"
AM_GLIB_GNU_GETTEXT

# Checks for libraries.
PKG_CHECK_MODULES(pidgin, [pidgin >= 2.5.2], , [AC_MSG_ERROR(pidgin >= 2.5.2 required!)])
LIBS="$LIBS $pidgin_LIBS"
CFLAGS="$CFLAGS $pidgin_CFLAGS"

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 po/Makefile.in])
AC_OUTPUT
